3.0.3/_sources/gallery/images_contours_and_fields/pcolormesh_levels.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_images_contours_and_fields_pcolormesh_levels.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_images_contours_and_fields_pcolormesh_levels.py:


==========
pcolormesh
==========

Shows how to combine Normalization and Colormap instances to draw
"levels" in :meth:`~.axes.Axes.pcolor`, :meth:`~.axes.Axes.pcolormesh`
and :meth:`~.axes.Axes.imshow` type plots in a similar
way to the levels keyword argument to contour/contourf.




.. code-block:: python


    import matplotlib
    import matplotlib.pyplot as plt
    from matplotlib.colors import BoundaryNorm
    from matplotlib.ticker import MaxNLocator
    import numpy as np


    # make these smaller to increase the resolution
    dx, dy = 0.05, 0.05

    # generate 2 2d grids for the x & y bounds
    y, x = np.mgrid[slice(1, 5 + dy, dy),
                    slice(1, 5 + dx, dx)]

    z = np.sin(x)**10 + np.cos(10 + y*x) * np.cos(x)

    # x and y are bounds, so z should be the value *inside* those bounds.
    # Therefore, remove the last value from the z array.
    z = z[:-1, :-1]
    levels = MaxNLocator(nbins=15).tick_values(z.min(), z.max())


    # pick the desired colormap, sensible levels, and define a normalization
    # instance which takes data values and translates those into levels.
    cmap = plt.get_cmap('PiYG')
    norm = BoundaryNorm(levels, ncolors=cmap.N, clip=True)

    fig, (ax0, ax1) = plt.subplots(nrows=2)

    im = ax0.pcolormesh(x, y, z, cmap=cmap, norm=norm)
    fig.colorbar(im, ax=ax0)
    ax0.set_title('pcolormesh with levels')


    # contours are *point* based plots, so convert our bound into point
    # centers
    cf = ax1.contourf(x[:-1, :-1] + dx/2.,
                      y[:-1, :-1] + dy/2., z, levels=levels,
                      cmap=cmap)
    fig.colorbar(cf, ax=ax1)
    ax1.set_title('contourf with levels')

    # adjust spacing between subplots so `ax1` title and `ax0` tick labels
    # don't overlap
    fig.tight_layout()

    plt.show()




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_pcolormesh_levels_001.png
    :class: sphx-glr-single-img




------------

References
""""""""""

The use of the following functions and methods is shown in this example:



.. code-block:: python


    matplotlib.axes.Axes.pcolormesh
    matplotlib.pyplot.pcolormesh
    matplotlib.axes.Axes.contourf
    matplotlib.pyplot.contourf
    matplotlib.figure.Figure.colorbar
    matplotlib.pyplot.colorbar
    matplotlib.colors.BoundaryNorm
    matplotlib.ticker.MaxNLocator







.. _sphx_glr_download_gallery_images_contours_and_fields_pcolormesh_levels.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: pcolormesh_levels.py <pcolormesh_levels.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: pcolormesh_levels.ipynb <pcolormesh_levels.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
